--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <title>Travel-Guide</title>
 </head>
 <body>
     <section class="Header">
+        <div class="abc">
         <div class="container">
-
+            <img src="/Images/triptok.png">
+            <button type="button" class="login-btn">Login</button>
         </div>
+        <h1>Travel around <span style="color:coral">INDIA</span></h1>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search City">
+            <div class="input-group-append" >
+                <button type="submit" class="input-group-text btn">Search</button>
+            </div>
+        </div>
+    </div>
     </section>
     
 </body>
