features and gallery added

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <title>Travel-Guide</title>
 </head>
 <body>
+    <!--------------------Hero-------------------->
     <section class="Header">
         <div class="abc">
         <div class="container">
-            <img src="/Images/triptok.png">
+            <img src="/Images/airplane.png">
             <button type="button" class="login-btn">Login</button>
         </div>
         <h1>Travel around <span style="color:coral">INDIA</span></h1>
@@ -28,6 +29,8 @@
     </div>
     </section>
 
+
+<!--------------------Feature Destinations-------------------->        
     <section class="features">
         <h1>FEATURED DESTINATIONS</h1>
         <div class="container">
@@ -35,38 +38,126 @@
                 <div class="col-md-4">
                     <div class="feature-box">
                         <div class="feature-img">
-                            <img src="/Images/1.jpg" alt="">
+                            <img src="/Images/jodhpur.jpg" alt="">
                             <div class="price">
                                 <p>78$</p>
                             </div>
-                            <div class="rating">
+                            <!-- <div class="rating">
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star-half-o"></i>
-
-                            </div>
+                            </div> -->
                         </div>
                         <div class="feature-details">
-                            <h4>Los Angeles</h4>
-                            <p>Los Angeles is a sprawling Southern California city and the center of the nation’s film and television industry. Near its iconic Hollywood sign, studios such as Paramount Pictures, Universal and Warner Brothers offer behind-the-scenes tours.</p>
+                            <h4>Jodhpur</h4>
+                            <p>Jodhpur is a city in the Thar Desert of the northwest Indian state of Rajasthan. Its 15th-century Mehrangarh Fort is a former palace that’s now a museum, displaying weapons, paintings and elaborate royal palanquins (sedan chairs). Set on on a rocky outcrop, the fort overlooks the walled city, where many buildings are painted the city’s iconic shade of blue</p>
                             <div>
-                                <span><i class="fa-solid fa-map-pin"></i>Los Angeles</span>
+                                <span><i class="fa-solid fa-map-pin"></i>Jodhpur</span>
                                 <span><i class="fa fa-sun-o"></i>4 Days</span>
                                 <span><i class="fa fa-moon-o"></i>3 Nights</span>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="/Images/kolkata.jpg" alt="">
+                            <div class="price">
+                                <p>87$</p>
+                            </div>
+                            <!-- <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-o"></i>
+                            </div> -->
+                        </div>
+                        <div class="feature-details">
+                            <h4>Kolkata</h4>
+                            <p>Kolkata (formerly Calcutta) is the capital of India's West Bengal state. Founded as an East India Company trading post, it was India's capital under the British Raj from 1773–1911. Today it’s known for its grand colonial architecture, art galleries and cultural festivals. It’s also home to Mother House, headquarters of the Missionaries of Charity, founded by Mother Teresa.</p>
+                            <div>
+                                <span><i class="fa-solid fa-map-pin"></i>Kolkata</span>
+                                <span><i class="fa fa-sun-o"></i>4 Days</span>
+                                <span><i class="fa fa-moon-o"></i>3 Nights</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="feature-box">
+                        <div class="feature-img">
+                            <img src="/Images/3.jpg" alt="">
+                            <div class="price">
+                                <p>93$</p>
+                            </div>
+                            <!-- <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star-half-o"></i>
+                            </div> -->
+                        </div>
+                        <div class="feature-details">
+                            <h4>Mumbai</h4>
+                            <p>Mumbai (formerly called Bombay) is a densely populated city on India’s west coast. A financial center, it's India's largest city. On the Mumbai Harbour waterfront stands the iconic Gateway of India stone arch, built by the British Raj in 1924. Offshore, nearby Elephanta Island holds ancient cave temples dedicated to the Hindu god Shiva. The city's also famous as the heart of the Bollywood film industry.</p>
+                            <div>
+                                <span><i class="fa-solid fa-map-pin"></i>Mumbai</span>
+                                <span><i class="fa fa-sun-o"></i>4 Days</span>
+                                <span><i class="fa fa-moon-o"></i>3 Nights</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
         </div>
     </section>
-    
-    
+
+
+ <!--------------------Travelling Gallery-------------------->   
+ <section class="gallery">
+    <h1>TRAVELLING GALLERY</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="gallery-box">
+                <img src="/Images/jdp-1.jpg" alt="">
+                <h4>Jodhpur</h4>
+                </div>    
+            </div>
+            <div class="col-md-3">
+                <div class="gallery-box">
+                <img src="/Images/kol-1.jpg" alt="">
+                <h4>Kolkata</h4>
+                </div>    
+            </div>
+            <div class="col-md-3">
+                <div class="gallery-box">
+                <img src="/Images/mum-1.jpg" alt="">
+                <h4>Mumbai</h4>
+                </div>    
+            </div>
+            <div class="col-md-3">
+                <div class="gallery-box">
+                <img src="/Images/mum-2.jpg" alt="">
+                <h4>CST</h4>
+                </div>    
+            </div>
+        </div>
+    </div>
+ </section>
+
+ 
+<!--------------------Banner--------------------> 
+<section class="banner">
+
+</section>
+
 </body>
 </html>
