--- a/index.html
+++ b/index.html
@@ -156,8 +156,45 @@
  
 <!--------------------Banner--------------------> 
 <section class="banner">
-
+<div class="banner-highlights">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <h2>Get 30% on top destinations</h2>
+                <p>Book your tickts before deadline to avail 30% discount.</p>
+            </div>
+            <div class="col-md-4">
+                <button type="button" class="booking-btn">Book Now</button>
+            </div>
+        </div>
+    </div>
+</div>
 </section>
 
+
+<!--------------------User Review--------------------> 
+<section class="users-feedback">
+    <h1>USER REVIEWS</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+
+            </div>
+            <div class="col-md-4">
+                <div class="user-review">
+                    <p>Hello</p>
+                    <h5>Aniket Ramdev</h5>
+                    <small>Jodhpur</small>
+                </div>
+            </div>
+            <div class="col-md-4">
+
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
 </body>
 </html>
