--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="/Images/airplane.png">
             <button type="button" class="login-btn">Login</button>
         </div>
-        <h1>Travel around <span style="color:coral">INDIA</span></h1>
+        <h1>Travel around <span style="color:#FF9933">IN</span>D<span style="color:#138808">IA</span></h1>
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Search City">
             <div class="input-group-append" >
