user reviews completed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Travel-Guide</title>
 </head>
 <body>
+
     <!--------------------Hero-------------------->
     <section class="Header">
         <div class="abc">
@@ -40,7 +41,7 @@
                         <div class="feature-img">
                             <img src="/Images/jodhpur.jpg" alt="">
                             <div class="price">
-                                <p>78$</p>
+                                <p>7899/-</p>
                             </div>
                             <!-- <div class="rating">
                                 <i class="fa fa-star"></i>
@@ -66,7 +67,7 @@
                         <div class="feature-img">
                             <img src="/Images/kolkata.jpg" alt="">
                             <div class="price">
-                                <p>87$</p>
+                                <p>8499/-</p>
                             </div>
                             <!-- <div class="rating">
                                 <i class="fa fa-star"></i>
@@ -92,7 +93,7 @@
                         <div class="feature-img">
                             <img src="/Images/3.jpg" alt="">
                             <div class="price">
-                                <p>93$</p>
+                                <p>9999/-</p>
                             </div>
                             <!-- <div class="rating">
                                 <i class="fa fa-star"></i>
@@ -107,8 +108,8 @@
                             <p>Mumbai (formerly called Bombay) is a densely populated city on India’s west coast. A financial center, it's India's largest city. On the Mumbai Harbour waterfront stands the iconic Gateway of India stone arch, built by the British Raj in 1924. Offshore, nearby Elephanta Island holds ancient cave temples dedicated to the Hindu god Shiva. The city's also famous as the heart of the Bollywood film industry.</p>
                             <div>
                                 <span><i class="fa-solid fa-map-pin"></i>Mumbai</span>
-                                <span><i class="fa fa-sun-o"></i>4 Days</span>
-                                <span><i class="fa fa-moon-o"></i>3 Nights</span>
+                                <span><i class="fa fa-sun-o"></i>5 Days</span>
+                                <span><i class="fa fa-moon-o"></i>4 Nights</span>
                             </div>
                         </div>
                     </div>
@@ -178,22 +179,37 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-
+                <div class="user-review">
+                    <p>We would recommend Jack Travels and will be using them again in the future. Jack and his team gave us excellent service and have an amazing time</p>
+                    <h5>Balasaheb Thackrey</h5>
+                    <small>Mumbai</small>
+                </div>
+                <img src="/Images/user1.jpg" alt="">
             </div>
             <div class="col-md-4">
                 <div class="user-review">
-                    <p>Hello</p>
+                    <p>We would recommend Jack Travels and will be using them again in the future. Jack and his team gave us excellent service and have an amazing time</p>
                     <h5>Aniket Ramdev</h5>
                     <small>Jodhpur</small>
                 </div>
+                <img src="/Images/user2.jpg" alt="">
             </div>
             <div class="col-md-4">
-
+                <div class="user-review">
+                    <p>We would recommend Jack Travels and will be using them again in the future. Jack and his team gave us excellent service and have an amazing time</p>
+                    <h5>Shreya Ghoshal</h5>
+                    <small>Kolkata</small>
+                </div>
+                <img src="/Images/user3.jpg" alt="">
             </div>
-
         </div>
-
     </div>
+</section>
+
+
+<!--------------------Footer--------------------> 
+
+<section>
 
 </section>
 </body>
