--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <title>Travel-Guide</title>
+    
+    <!--------------------bootstrap-------------------->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <!--------------------fontawesome-------------------->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <title>Jack-Travels</title>
 </head>
 <body>
 
@@ -43,21 +46,21 @@
                             <div class="price">
                                 <p>7899/-</p>
                             </div>
-                            <!-- <div class="rating">
+                            <div class="rating">
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star-half-o"></i>
-                            </div> -->
+                            </div>
                         </div>
                         <div class="feature-details">
                             <h4>Jodhpur</h4>
                             <p>Jodhpur is a city in the Thar Desert of the northwest Indian state of Rajasthan. Its 15th-century Mehrangarh Fort is a former palace that’s now a museum, displaying weapons, paintings and elaborate royal palanquins (sedan chairs). Set on on a rocky outcrop, the fort overlooks the walled city, where many buildings are painted the city’s iconic shade of blue</p>
                             <div>
-                                <span><i class="fa-solid fa-map-pin"></i>Jodhpur</span>
-                                <span><i class="fa fa-sun-o"></i>4 Days</span>
-                                <span><i class="fa fa-moon-o"></i>3 Nights</span>
+                                <span><i class="bi bi-geo-alt-fill"></i> Jodhpur</span>
+                                <span><i class="fa fa-sun-o"></i> 4 Days</span>
+                                <span><i class="fa fa-moon-o"></i> 3 Nights</span>
                             </div>
                         </div>
                     </div>
@@ -69,21 +72,20 @@
                             <div class="price">
                                 <p>8499/-</p>
                             </div>
-                            <!-- <div class="rating">
+                            <div class="rating">
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
-                                <i class="fa fa-star-half-o"></i>
-                            </div> -->
+                            </div>
                         </div>
                         <div class="feature-details">
                             <h4>Kolkata</h4>
                             <p>Kolkata (formerly Calcutta) is the capital of India's West Bengal state. Founded as an East India Company trading post, it was India's capital under the British Raj from 1773–1911. Today it’s known for its grand colonial architecture, art galleries and cultural festivals. It’s also home to Mother House, headquarters of the Missionaries of Charity, founded by Mother Teresa.</p>
                             <div>
-                                <span><i class="fa-solid fa-map-pin"></i>Kolkata</span>
-                                <span><i class="fa fa-sun-o"></i>4 Days</span>
-                                <span><i class="fa fa-moon-o"></i>3 Nights</span>
+                                <span><i class="bi bi-geo-alt-fill"></i> Kolkata</span>
+                                <span><i class="fa fa-sun-o"></i> 4 Days</span>
+                                <span><i class="fa fa-moon-o"></i> 3 Nights</span>
                             </div>
                         </div>
                     </div>
@@ -95,21 +97,21 @@
                             <div class="price">
                                 <p>9999/-</p>
                             </div>
-                            <!-- <div class="rating">
+                            <div class="rating">
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star-half-o"></i>
-                            </div> -->
+                            </div>
                         </div>
                         <div class="feature-details">
                             <h4>Mumbai</h4>
                             <p>Mumbai (formerly called Bombay) is a densely populated city on India’s west coast. A financial center, it's India's largest city. On the Mumbai Harbour waterfront stands the iconic Gateway of India stone arch, built by the British Raj in 1924. Offshore, nearby Elephanta Island holds ancient cave temples dedicated to the Hindu god Shiva. The city's also famous as the heart of the Bollywood film industry.</p>
                             <div>
-                                <span><i class="fa-solid fa-map-pin"></i>Mumbai</span>
-                                <span><i class="fa fa-sun-o"></i>5 Days</span>
-                                <span><i class="fa fa-moon-o"></i>4 Nights</span>
+                                <span><i class="bi bi-geo-alt-fill"></i> Mumbai</span>
+                                <span><i class="fa fa-sun-o"></i> 5 Days</span>
+                                <span><i class="fa fa-moon-o"></i> 4 Nights</span>
                             </div>
                         </div>
                     </div>
@@ -209,8 +211,39 @@
 
 <!--------------------Footer--------------------> 
 
-<section>
+<section class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <img src="/Images/airplane.png" class="footer-logo" alt="">
+                <p>This is what holidays, travels, vacations are about. It is not really rest or even leisure we chase. We strain to renew our capacity to wonder, to shock ourselves into astonishment once again.</p>
+            </div>
+            <div class="col-md-3">
+                <h4>Features</h4>
+                <p>Deals & Offers</p>
+                <p>Customer Reviews</p>
+                <p>Cancellation Policy</p>
+            </div>
+            <div class="col-md-3">
+                <h4>Reach out to us</h4>
+                <p><i class="bi bi-telephone-fill"></i>  +91-7823080463</p>
+                <p><i class="bi bi-envelope-fill"></i>  aniketramdev@gmail.com</p>
+                <p><i class="bi bi-building"></i>  B-1102 Kamalraj Parijat, Alandi Road, Dighi, Pune - 411015</p>
+            </div>
+            <div class="col-md-3">
+                <h4>Follow us on</h4>
+                <p><i class="bi bi-facebook"></i>  Jack-Travels</p>
+                <p><i class="bi bi-instagram"></i>  Jack-Travels</p>
+                <p><i class="bi bi-whatsapp"></i>  +91-7823080463</p>
+            </div>
+        </div>
+        <hr>
+        <p class="copyright">Made with <i class="bi bi-suit-heart-fill"></i> by Aniket Ramdev - 2022</p>
+    </div>
 
 </section>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
